testsuite/tests/rename/should_fail/T7906.hs
module T7906 where

class Foo f where
    foo :: f
{-# INLINABLE foo #-}
