testsuite/tests/rename/should_fail/T7906.stderr

T7906.hs:5:15: error:
    The INLINABLE pragma for ‘foo’ lacks an accompanying binding
    Suggested fix:
      Move the INLINABLE pragma to the declaration site of ‘foo’.
